--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 main {
     background-color: white;
-    width: 500px;
+    width: 700px;
     padding: 20px;
     margin: auto;
     border-radius: 10px;
@@ -14,6 +14,8 @@ main {
 
 h1 {
     color: darkgoldenrod;
+    text-align: center;
+    background-image: url ("images\coku.jpeg");
 }
 
 h2 {
