--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     background-color: rgb(69, 69, 69);
     font: 13pt Arial;
+    background-image:url('coku.jpg');
+    background-attachment: fixed;
+    
 }
 
 main {
@@ -10,6 +13,7 @@ main {
     margin: auto;
     border-radius: 10px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.529);
+    
 }
 
 h1 {
@@ -48,3 +52,65 @@ a:hover {
     color: darkgoldenrod;
     text-decoration: none;
 }
+
+.rodape-prin
+{
+    background: #3C948B;
+    position:absolute;
+    bottom:0; 
+    width:100%;
+    margin-top: 10px;;
+    height: 40px;
+    width:100%;
+    text-align: center;
+  
+}
+
+*{
+	margin: 0;
+	padding: 0;
+	text-decoration: none;
+	list-style-type: none;
+	color: #000;
+}
+
+#menu-trigger {
+    width: 30px;
+    height: 20px;
+    position: absolute;
+    top: 10px;
+    margin-right: 20px;
+    right: 0;
+    cursor: pointer;
+}
+
+
+.menu-trigger  div {
+    width: 30px;
+    height: 4px;
+    background: rgb(243, 9, 9) none repeat scroll 0% 0%;
+    margin-top: 3px;
+}
+
+
+.menu-hidde {
+	background: rgb(59, 107, 238) none repeat scroll 0% 0%;
+	width: 185px;
+	height: 100%;
+	position: absolute;
+	box-shadow: 1px 2px 3px rgb(241, 236, 236);
+	left: -100%;
+	transition: left 0.5s ease 0s;
+}
+
+.menu-hidde li {
+    color: rgb(190, 230, 15);
+    font-size: 20px;
+    padding: 18px;
+    cursor: pointer;
+}
+.menu-hidde ul {
+    position: absolute;
+    top: 31px;
+}
+
