--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     font: 13pt Arial;
     background-image:url('coku.jpg');
     background-attachment: fixed;
+    background-position: center;
     
 }
 
