--- a/001.css
+++ b/001.css
@@ -5,6 +5,7 @@ html {
 
 body {
     background-color: rgb(5, 5, 5);
+    position: relative;
 }
 #slider {
     position: relative;
@@ -70,3 +71,4 @@ a.control_next {
     width: 80px;
     height: 80px;
 }
+
